Updated the VEHouseholdVehiclesDL and VETravelPerformanceDL module to integrate with latest VE version.

--- a/sources/modules/VEHouseholdVehiclesDL/DESCRIPTION
+++ b/sources/modules/VEHouseholdVehiclesDL/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: VEHouseholdVehiclesDL
 Type: Package
-Title: Model household vehicles
-Version: 0.9.6
-Date: 11/6/18
+Title: Model household vehicles with driver and vehicle adjustments
+Version: 2.0.0
+Date: 2020-08-14
 Author: Brian Gregor [aut, cre], Aditya Gore <aditya.gore@rsginc.com> [cre]
 Maintainer: Brian Gregor <gregorb@or-analytics.com>, Aditya Gore <aditya.gore@rsginc.com>
 Copyright: AASHTO
@@ -17,17 +17,17 @@ Description: This package contains modules which predict household vehicle
     vehicles is calculated as a function of the vehicle age, type, and vehicle
     miles traveled. It also randomly assigns household vehicles to be driverless based
     on the driverless vehicle proportions provided in the inputs.
-License: Apache License 2.0
+License: file LICENSE
 LazyData: TRUE
-Depends: R (>= 3.1.0)
+Depends: R (>= 3.6.0)
 Imports:
     visioneval,
     ordinal,
     reshape2,
-    usethis,
     VE2001NHTS
 Suggests:
     knitr
 Encoding: UTF-8
 VignetteBuilder: knitr
-RoxygenNote: 7.1.0
+Roxygen: list(load='source')
+RoxygenNote: 7.1.1
