--- a/sources/modules/VETravelPerformanceDL/NAMESPACE
+++ b/sources/modules/VETravelPerformanceDL/NAMESPACE
@@ -8,6 +8,7 @@ export(CalculateMpgMpkwhAdjustments)
 export(CalculatePtranEnergyAndEmissions)
 export(CalculateRoadDvmt)
 export(CalculateRoadPerformance)
+export(CalculateSafetyMeasures)
 export(CalculateVehicleOperatingCost)
 export(Initialize)
 export(assignHhUrbanDvmtProp)
