--- a/sources/modules/VETravelPerformanceDL/DESCRIPTION
+++ b/sources/modules/VETravelPerformanceDL/DESCRIPTION
@@ -1,8 +1,8 @@
 Package: VETravelPerformanceDL
 Type: Package
 Title: Balances cost and travel and calculates travel performance measures
-Version: 0.9.5
-Date: 02/13/20
+Version: 2.0.0
+Date: 2020-08-14
 Author: Brian Gregor [aut, cre],
 Maintainer: Brian Gregor <gregorb@or-analytics.com>
 Copyright: AASHTO
@@ -14,11 +14,29 @@ Description: Contains modules for calculating fuel consumption, emissions,
     and travel time). Calculates fuel consumption (including electricity) and
     greenhouse gas emissions for households, light-duty commercial service
     vehicles, heavy trucks, and public transit modes.
-License: Apache License 2.0
+License: file LICENSE
 LazyData: TRUE
-Depends: R (>= 3.1.0)
+Depends: R (>= 3.6.0)
 Imports:
     visioneval,
-    usethis
+    dplyr,
+    filesstrings,
+    stringr,
+    VEPowertrainsAndFuels,
+    VEHouseholdTravel
 Encoding: UTF-8
-RoxygenNote: 7.1.0
+Roxygen: list(load='source')
+RoxygenNote: 7.1.1
+Collate: 
+    'AdjustHhVehicleMpgMpkwh.R'
+    'BalanceRoadCostsAndRevenues.R'
+    'BudgetHouseholdDvmt.R'
+    'CalculateComEnergyAndEmissions.R'
+    'CalculateMpgMpkwhAdjustments.R'
+    'CalculatePtranEnergyAndEmissions.R'
+    'CalculateRoadDvmt.R'
+    'CalculateRoadPerformance.R'
+    'CalculateSafetyMeasures.R'
+    'CalculateVehicleOperatingCost.R'
+    'LoadDefaultRoadDvmtValues.R'
+    'Initialize.R'
